express-static-file-server

--- a/module3/3.1/package.json
+++ b/module3/3.1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-router-boilerplate",
+  "name": "my_movie_antoine",
   "version": "1.0.0",
   "description": "myJScourse's frontend boilerplate with a router",
   "scripts": {
